[package]
name = "hazard-pointers-demo"
version = "0.1.0"
edition = "2024"
authors = ["Oleksandr Prokhorenko"]
description = "Demonstration of solving the ABA problem with hazard pointers in Rust"

[dependencies]
crossbeam-utils = "0.8.15"
rand = "0.9.0"
clap = { version = "4.4.12", features = ["derive"] }
colored = "3.0.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "lightweight_bench"
harness = false
